Fix(eos_validate_state): ANTA Fix the report to have consistent test descriptions, categories and input details (#3743)

--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf2a-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf2a-catalog.yml
@@ -58,40 +58,28 @@ anta.tests.connectivity:
       neighbor_port: Ethernet3
       port: Ethernet1
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet1 - remote: dc1-spine1_Ethernet3'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet1 - Remote: dc1-spine1 Ethernet3'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-spine2.dc1.local
       neighbor_port: Ethernet3
       port: Ethernet2
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet2 - remote: dc1-spine2_Ethernet3'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet2 - Remote: dc1-spine2 Ethernet3'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-leaf2c.dc1.local
       neighbor_port: Ethernet1
       port: Ethernet8
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet8 - remote: dc1-leaf2c_Ethernet1'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet8 - Remote: dc1-leaf2c Ethernet1'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf2a
       neighbor_port: Ethernet6
       port: Ethernet6
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet6 - remote: dc2-leaf2a_Ethernet6'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet6 - Remote: dc2-leaf2a Ethernet6'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.8
@@ -99,10 +87,8 @@ anta.tests.connectivity:
       source: 10.255.255.9
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc1-leaf2a_Ethernet1 - Destination: dc1-spine1_Ethernet3'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.9) - Destination:
+        dc1-spine1 Ethernet3 (IP: 10.255.255.8)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.10
@@ -110,10 +96,8 @@ anta.tests.connectivity:
       source: 10.255.255.11
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc1-leaf2a_Ethernet2 - Destination: dc1-spine2_Ethernet3'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.11) - Destination:
+        dc1-spine2 Ethernet3 (IP: 10.255.255.10)'
 - VerifyReachability:
     hosts:
     - destination: 192.168.100.1
@@ -121,10 +105,8 @@ anta.tests.connectivity:
       source: 192.168.100.0
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc1-leaf2a_Ethernet6 - Destination: dc2-leaf2a_Ethernet6'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet6 (IP: 192.168.100.0) - Destination:
+        dc2-leaf2a Ethernet6 (IP: 192.168.100.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.1
@@ -132,10 +114,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.0.1'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc1-spine1
+        Loopback0 (IP: 10.255.0.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.2
@@ -143,10 +123,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.0.2'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc1-spine2
+        Loopback0 (IP: 10.255.0.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.3
@@ -154,10 +132,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.0.3'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc1-leaf1a
+        Loopback0 (IP: 10.255.0.3)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.4
@@ -165,10 +141,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.0.4'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc1-leaf1b
+        Loopback0 (IP: 10.255.0.4)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.5
@@ -176,10 +150,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.0.5'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc1-leaf2a
+        Loopback0 (IP: 10.255.0.5)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.1
@@ -187,10 +159,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.2.1'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc1-wan1 Loopback0
+        (IP: 10.255.2.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.2
@@ -198,10 +168,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.2.2'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc1-wan2 Loopback0
+        (IP: 10.255.2.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.11
@@ -209,10 +177,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.128.11'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc2-spine1
+        Loopback0 (IP: 10.255.128.11)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.12
@@ -220,10 +186,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.128.12'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc2-spine2
+        Loopback0 (IP: 10.255.128.12)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.13
@@ -231,10 +195,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.128.13'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc2-leaf1a
+        Loopback0 (IP: 10.255.128.13)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.14
@@ -242,10 +204,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.128.14'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc2-leaf1b
+        Loopback0 (IP: 10.255.128.14)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.15
@@ -253,10 +213,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.128.15'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc2-leaf2a
+        Loopback0 (IP: 10.255.128.15)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.16
@@ -264,10 +222,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.128.16'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc2-leaf2b
+        Loopback0 (IP: 10.255.128.16)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.17
@@ -275,10 +231,8 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.128.17'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc2-leaf3a.arista.com
+        Loopback0 (IP: 10.255.128.17)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.18
@@ -286,18 +240,20 @@ anta.tests.connectivity:
       source: 10.255.0.5
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2a - 10.255.0.5/32 Destination: 10.255.128.18'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.5) - Destination: dc2-leaf3b.arista.com
+        Loopback0 (IP: 10.255.128.18)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
 anta.tests.hardware:
 - VerifyEnvironmentPower:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyEnvironmentCooling:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyTemperature: null
@@ -306,6 +262,9 @@ anta.tests.hardware:
     - Arista Networks
     - Arastra, Inc.
     - Not Present
+    result_overwrite:
+      custom_field: 'Accepted Manufacturers: ''Arista Networks'', ''Arastra, Inc.'',
+        ''Not Present'''
 - VerifyTransceiversManufacturers:
     manufacturers:
     - Not Present
@@ -481,27 +440,21 @@ anta.tests.routing.bgp:
       peers:
       - 10.255.0.1
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.0.1'
+      custom_field: 'BGP EVPN Peer: dc1-spine1 (IP: 10.255.0.1)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.0.2
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.0.2'
+      custom_field: 'BGP EVPN Peer: dc1-spine2 (IP: 10.255.0.2)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.15
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.128.15'
+      custom_field: 'BGP EVPN Peer: dc2-leaf2a (IP: 10.255.128.15)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -509,9 +462,7 @@ anta.tests.routing.bgp:
       - 10.255.255.8
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.8'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-spine1 (IP: 10.255.255.8)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -519,9 +470,7 @@ anta.tests.routing.bgp:
       - 10.255.255.10
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.10'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-spine2 (IP: 10.255.255.10)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -529,180 +478,117 @@ anta.tests.routing.bgp:
       - 192.168.100.1
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 192.168.100.1'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2a (IP: 192.168.100.1)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
     result_overwrite:
-      categories:
-      - BGP
       custom_field: 'Routing protocol model: multi-agent'
-      description: Verifies the configured routing protocol model.
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.1
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.1 - Peer: dc1-spine1'
     routes:
     - 10.255.0.1
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.2
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.2 - Peer: dc1-spine2'
     routes:
     - 10.255.0.2
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.3
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.3 - Peer: dc1-leaf1a'
     routes:
     - 10.255.0.3
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.4
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.4 - Peer: dc1-leaf1b'
     routes:
     - 10.255.0.4
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.5
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.5 - Peer: dc1-leaf2a'
     routes:
     - 10.255.0.5
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.2.1
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.2.1 - Peer: dc1-wan1'
     routes:
     - 10.255.2.1
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.2.2
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.2.2 - Peer: dc1-wan2'
     routes:
     - 10.255.2.2
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.11
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.11 - Peer: dc2-spine1'
     routes:
     - 10.255.128.11
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.12
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.12 - Peer: dc2-spine2'
     routes:
     - 10.255.128.12
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.13
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.13 - Peer: dc2-leaf1a'
     routes:
     - 10.255.128.13
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.14
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.14 - Peer: dc2-leaf1b'
     routes:
     - 10.255.128.14
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.15
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.15 - Peer: dc2-leaf2a'
     routes:
     - 10.255.128.15
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.16
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.16 - Peer: dc2-leaf2b'
     routes:
     - 10.255.128.16
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.17
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.17 - Peer: dc2-leaf3a.arista.com'
     routes:
     - 10.255.128.17
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.18
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.18 - Peer: dc2-leaf3b.arista.com'
     routes:
     - 10.255.128.18
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.1.3
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.1.3 - Peer: dc1-leaf1a'
     routes:
     - 10.255.1.3
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.1.5
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.1.5 - Peer: dc1-leaf2a'
     routes:
     - 10.255.1.5
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.129.13
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.129.13 - Peer: dc2-leaf1a'
     routes:
     - 10.255.129.13
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.129.15
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.129.15 - Peer: dc2-leaf2a'
     routes:
     - 10.255.129.15
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.129.17
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.129.17 - Peer: dc2-leaf3a.arista.com'
     routes:
     - 10.255.129.17
 anta.tests.security:
 - VerifyAPIHttpsSSL:
     profile: eAPI_SSL_Profile
+    result_overwrite:
+      custom_field: 'eAPI HTTPS SSL Profile: eAPI_SSL_Profile'
 anta.tests.snmp:
 - VerifySnmpStatus:
     vrf: default
@@ -723,12 +609,7 @@ anta.tests.software:
     - v1.8.0
 - VerifyEOSExtensions: null
 anta.tests.system:
-- VerifyNTP:
-    result_overwrite:
-      categories:
-      - NTP
-      custom_field: NTP
-      description: Synchronised with NTP server
+- VerifyNTP: null
 - VerifyUptime:
     minimum: 86400
 - VerifyReloadCause: null
