--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-spine2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-spine2-catalog.yml
@@ -79,30 +79,21 @@ anta.tests.connectivity:
       neighbor_port: Ethernet2
       port: Ethernet1
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet1 - remote: dc1-leaf1a_Ethernet2'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet1 - Remote: dc1-leaf1a Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-leaf1b.dc1.local
       neighbor_port: Ethernet2
       port: Ethernet2
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet2 - remote: dc1-leaf1b_Ethernet2'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet2 - Remote: dc1-leaf1b Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-leaf2a.dc1.local
       neighbor_port: Ethernet2
       port: Ethernet3
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet3 - remote: dc1-leaf2a_Ethernet2'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet3 - Remote: dc1-leaf2a Ethernet2'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.3
@@ -110,10 +101,8 @@ anta.tests.connectivity:
       source: 10.255.255.2
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc1-spine2_Ethernet1 - Destination: dc1-leaf1a_Ethernet2'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.2) - Destination:
+        dc1-leaf1a Ethernet2 (IP: 10.255.255.3)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.7
@@ -121,10 +110,8 @@ anta.tests.connectivity:
       source: 10.255.255.6
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc1-spine2_Ethernet2 - Destination: dc1-leaf1b_Ethernet2'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.6) - Destination:
+        dc1-leaf1b Ethernet2 (IP: 10.255.255.7)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.11
@@ -132,18 +119,20 @@ anta.tests.connectivity:
       source: 10.255.255.10
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc1-spine2_Ethernet3 - Destination: dc1-leaf2a_Ethernet2'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet3 (IP: 10.255.255.10) - Destination:
+        dc1-leaf2a Ethernet2 (IP: 10.255.255.11)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
 anta.tests.hardware:
 - VerifyEnvironmentPower:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyEnvironmentCooling:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyTemperature: null
@@ -152,6 +141,9 @@ anta.tests.hardware:
     - Arista Networks
     - Arastra, Inc.
     - Not Present
+    result_overwrite:
+      custom_field: 'Accepted Manufacturers: ''Arista Networks'', ''Arastra, Inc.'',
+        ''Not Present'''
 - VerifyTransceiversManufacturers:
     manufacturers:
     - Not Present
@@ -297,36 +289,28 @@ anta.tests.routing.bgp:
       peers:
       - 10.255.0.3
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.0.3'
+      custom_field: 'BGP EVPN Peer: dc1-leaf1a (IP: 10.255.0.3)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.0.4
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.0.4'
+      custom_field: 'BGP EVPN Peer: dc1-leaf1b (IP: 10.255.0.4)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.0.5
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.0.5'
+      custom_field: 'BGP EVPN Peer: dc1-leaf2a (IP: 10.255.0.5)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 142.112.41.2
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 142.112.41.2'
+      custom_field: 'BGP EVPN Peer: None (IP: 142.112.41.2)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -334,9 +318,7 @@ anta.tests.routing.bgp:
       - 10.255.255.3
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.3'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1a (IP: 10.255.255.3)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -344,9 +326,7 @@ anta.tests.routing.bgp:
       - 10.255.255.7
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.7'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1b (IP: 10.255.255.7)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -354,9 +334,7 @@ anta.tests.routing.bgp:
       - 10.255.255.11
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.11'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf2a (IP: 10.255.255.11)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -364,9 +342,7 @@ anta.tests.routing.bgp:
       - 142.112.39.2
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 142.112.39.2'
+      custom_field: 'BGP IPv4 Unicast Peer: None (IP: 142.112.39.2)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv6
@@ -374,20 +350,17 @@ anta.tests.routing.bgp:
       - 2001:db8:1::2
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv6 Unicast Peer: 2001:db8:1::2'
+      custom_field: 'BGP IPv6 Unicast Peer: None (IP: 2001:db8:1::2)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
     result_overwrite:
-      categories:
-      - BGP
       custom_field: 'Routing protocol model: multi-agent'
-      description: Verifies the configured routing protocol model.
 anta.tests.security:
 - VerifyAPIHttpsSSL:
     profile: eAPI_SSL_Profile
+    result_overwrite:
+      custom_field: 'eAPI HTTPS SSL Profile: eAPI_SSL_Profile'
 anta.tests.snmp:
 - VerifySnmpStatus:
     vrf: default
@@ -407,12 +380,7 @@ anta.tests.software:
     - v1.13.6
     - v1.8.0
 anta.tests.system:
-- VerifyNTP:
-    result_overwrite:
-      categories:
-      - NTP
-      custom_field: NTP
-      description: Synchronised with NTP server
+- VerifyNTP: null
 - VerifyUptime:
     minimum: 86400
 - VerifyReloadCause: null
