--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-spine1-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-spine1-catalog.yml
@@ -58,60 +58,42 @@ anta.tests.connectivity:
       neighbor_port: Ethernet1
       port: Ethernet1
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet1 - remote: dc2-leaf1a_Ethernet1'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet1 - Remote: dc2-leaf1a Ethernet1'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf1b
       neighbor_port: Ethernet1
       port: Ethernet2
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet2 - remote: dc2-leaf1b_Ethernet1'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet2 - Remote: dc2-leaf1b Ethernet1'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf2a
       neighbor_port: Ethernet1
       port: Ethernet3
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet3 - remote: dc2-leaf2a_Ethernet1'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf2a Ethernet1'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf2b
       neighbor_port: Ethernet1
       port: Ethernet4
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet4 - remote: dc2-leaf2b_Ethernet1'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf2b Ethernet1'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf3a.arista.com
       neighbor_port: Ethernet1
       port: Ethernet5
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet5 - remote: dc2-leaf3a.arista.com_Ethernet1'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet5 - Remote: dc2-leaf3a.arista.com Ethernet1'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf3b.arista.com
       neighbor_port: Ethernet1
       port: Ethernet6
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet6 - remote: dc2-leaf3b.arista.com_Ethernet1'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet6 - Remote: dc2-leaf3b.arista.com Ethernet1'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.105
@@ -119,10 +101,8 @@ anta.tests.connectivity:
       source: 10.255.255.104
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc2-spine1_Ethernet1 - Destination: dc2-leaf1a_Ethernet1'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.104) - Destination:
+        dc2-leaf1a Ethernet1 (IP: 10.255.255.105)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.109
@@ -130,10 +110,8 @@ anta.tests.connectivity:
       source: 10.255.255.108
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc2-spine1_Ethernet2 - Destination: dc2-leaf1b_Ethernet1'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.108) - Destination:
+        dc2-leaf1b Ethernet1 (IP: 10.255.255.109)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.113
@@ -141,10 +119,8 @@ anta.tests.connectivity:
       source: 10.255.255.112
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc2-spine1_Ethernet3 - Destination: dc2-leaf2a_Ethernet1'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet3 (IP: 10.255.255.112) - Destination:
+        dc2-leaf2a Ethernet1 (IP: 10.255.255.113)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.117
@@ -152,10 +128,8 @@ anta.tests.connectivity:
       source: 10.255.255.116
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc2-spine1_Ethernet4 - Destination: dc2-leaf2b_Ethernet1'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet4 (IP: 10.255.255.116) - Destination:
+        dc2-leaf2b Ethernet1 (IP: 10.255.255.117)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.121
@@ -163,10 +137,8 @@ anta.tests.connectivity:
       source: 10.255.255.120
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc2-spine1_Ethernet5 - Destination: dc2-leaf3a.arista.com_Ethernet1'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet5 (IP: 10.255.255.120) - Destination:
+        dc2-leaf3a.arista.com Ethernet1 (IP: 10.255.255.121)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.125
@@ -174,18 +146,20 @@ anta.tests.connectivity:
       source: 10.255.255.124
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc2-spine1_Ethernet6 - Destination: dc2-leaf3b.arista.com_Ethernet1'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet6 (IP: 10.255.255.124) - Destination:
+        dc2-leaf3b.arista.com Ethernet1 (IP: 10.255.255.125)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
 anta.tests.hardware:
 - VerifyEnvironmentPower:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyEnvironmentCooling:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyTemperature: null
@@ -194,6 +168,9 @@ anta.tests.hardware:
     - Arista Networks
     - Arastra, Inc.
     - Not Present
+    result_overwrite:
+      custom_field: 'Accepted Manufacturers: ''Arista Networks'', ''Arastra, Inc.'',
+        ''Not Present'''
 - VerifyTransceiversManufacturers:
     manufacturers:
     - Not Present
@@ -261,54 +238,42 @@ anta.tests.routing.bgp:
       peers:
       - 10.255.128.13
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.128.13'
+      custom_field: 'BGP EVPN Peer: dc2-leaf1a (IP: 10.255.128.13)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.14
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.128.14'
+      custom_field: 'BGP EVPN Peer: dc2-leaf1b (IP: 10.255.128.14)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.15
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.128.15'
+      custom_field: 'BGP EVPN Peer: dc2-leaf2a (IP: 10.255.128.15)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.16
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.128.16'
+      custom_field: 'BGP EVPN Peer: dc2-leaf2b (IP: 10.255.128.16)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.17
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.128.17'
+      custom_field: 'BGP EVPN Peer: dc2-leaf3a.arista.com (IP: 10.255.128.17)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.18
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.128.18'
+      custom_field: 'BGP EVPN Peer: dc2-leaf3b.arista.com (IP: 10.255.128.18)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -316,9 +281,7 @@ anta.tests.routing.bgp:
       - 10.255.255.105
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.105'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf1a (IP: 10.255.255.105)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -326,9 +289,7 @@ anta.tests.routing.bgp:
       - 10.255.255.109
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.109'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf1b (IP: 10.255.255.109)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -336,9 +297,7 @@ anta.tests.routing.bgp:
       - 10.255.255.113
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.113'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2a (IP: 10.255.255.113)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -346,9 +305,7 @@ anta.tests.routing.bgp:
       - 10.255.255.117
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.117'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2b (IP: 10.255.255.117)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -356,9 +313,7 @@ anta.tests.routing.bgp:
       - 10.255.255.121
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.121'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf3a.arista.com (IP: 10.255.255.121)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -366,20 +321,17 @@ anta.tests.routing.bgp:
       - 10.255.255.125
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.125'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf3b.arista.com (IP: 10.255.255.125)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
     result_overwrite:
-      categories:
-      - BGP
       custom_field: 'Routing protocol model: multi-agent'
-      description: Verifies the configured routing protocol model.
 anta.tests.security:
 - VerifyAPIHttpsSSL:
     profile: eAPI_SSL_Profile
+    result_overwrite:
+      custom_field: 'eAPI HTTPS SSL Profile: eAPI_SSL_Profile'
 anta.tests.snmp:
 - VerifySnmpStatus:
     vrf: default
@@ -399,12 +351,7 @@ anta.tests.software:
     - v1.13.6
     - v1.8.0
 anta.tests.system:
-- VerifyNTP:
-    result_overwrite:
-      categories:
-      - NTP
-      custom_field: NTP
-      description: Synchronised with NTP server
+- VerifyNTP: null
 - VerifyUptime:
     minimum: 86400
 - VerifyReloadCause: null
