--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -147,6 +147,7 @@ service-routing-protocols-model
 service-routing-protocols-model-2
 router-general
 router-traffic-engineering
+router-segment-security
 sflow
 snmp
 snmp-server-traps
